syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


option go_package = "github.com/based-chat/auth/pkg/user/v1;user_v1";

service UserV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    UserRole role = 4;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    UserRole role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    bool deleted = 1;
}

enum UserRole {
    USER_ROLE_UNSPECIFIED = 0;
    ADMIN = 1;
    USER = 2;
}
